Change to error image when strips fail to load. Also show reload link

--- a/comicagg/media/css/v2009/base.css
+++ b/comicagg/media/css/v2009/base.css
@@ -137,6 +137,9 @@ a:visited {
 	vertical-align:middle;
 	border:0;
 }
+.comic .comicextra .reload {
+font-weight:bolder;
+}
 .comic .newstripsnotice {
 	color:orange;
 	font-weight:bolder;
