--- a/comicagg/templates/v2009/agregator/read.html
+++ b/comicagg/templates/v2009/agregator/read.html
@@ -41,14 +41,14 @@
 	{% if unreadlist %}<span class="newstripsnotice">{% trans "New strips!" %}</span>{% endif %}
 	<div class="striplist">
 		{% for unread in unreadlist %}
-		<img id="imgu{{ unread.id }}" asrc="{{ unread.history.get_url }}" alt="new - loading..." title="{{ unread.history.alt_text|default_if_none:""|safe }}" onerror="imageErrorHandler(this)"/><br/>
+		<img id="imgu{{ unread.id }}" src="{{ mediaurl }}images/v2009/striploading.gif" alt="new - loading..." title="{{ unread.history.alt_text|default_if_none:""|safe }}" onerror="imageErrorHandler(this)"/><br/>
 		{% empty %}
-		<img id="imgl{{ comic.id }}" asrc="{{ comic.get_url }}" alt="last - loading..." title="{{ comic.last_image_alt_text|default_if_none:""|safe }}" onerror="imageErrorHandler(this)"/>
+		<img id="imgl{{ comic.id }}" src="{{ mediaurl }}images/v2009/striploading.gif" alt="last - loading..." title="{{ comic.last_image_alt_text|default_if_none:""|safe }}" onerror="imageErrorHandler(this)"/>
 		{% endfor %}
 	</div>
 	<div class="comicextra">
+		<span id="reload{{ comic.id }}" class="reload" style="display:none"><a onclick="reloadComic({{ comic.id }})">{% trans "Reload images" %}</a> | </span>
 		{% if unreadlist %}
-		<span id="reload{{ comic.id }}" class="reload" style="display:none"><a href="#">{% trans "Reload images" %}</a> | </span>
 		<img src="{{ mediaurl }}images/loading12.gif" id="extraloading{{ comic.id }}" alt="" style="display:none"/> 
 		<a href="#">{% trans "Mark as read"%}</a> | 
 		{% trans "Vote" %} 
