--- a/comicagg/templates/v2009/registration/login_form.html
+++ b/comicagg/templates/v2009/registration/login_form.html
@@ -3,6 +3,7 @@
 {% block title %}{% trans 'Login'%} -{% endblock %}
 {% block onload %}focusOnLogin(){% endblock %}
 {% block content %}
+{% block done-content %}{% endblock %}
 <p class="loginbox">{% trans "Comic Aggregator allows you to read lots and lots of webcomics in the same page." %}</p>
 <div id="login_wrap" class="loginbox">
 	<h3>{% trans 'Login into your account'%}</h3>
