--- a/comicagg/templates/v2009/registration/password_reset_done.html
+++ b/comicagg/templates/v2009/registration/password_reset_done.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans 'E-mail sent'%}{% endblock %}
-{% block content %}
+{% block title %}{% trans 'E-mail sent'%} - {% endblock %}
+{% block done-content %}
 <h3>{% trans 'Password reset'%}</h3>
 <p class="info">{% trans 'If you provided a correct username or e-mail, an e-mail has been sent to the associated e-mail address. You will find your new password in it.'%}</p>
 <p class="info">{% trans "If you don't receive any e-mail in the next minutes, try again reseting the password."%}</p><div class="text_center"><a href="{% url index %}">{% trans 'Back to home.'%}</a></div>
