--- a/comicagg/templates/v2009/agregator/read.html
+++ b/comicagg/templates/v2009/agregator/read.html
@@ -16,19 +16,24 @@
 {% endfor %}
 {% for comic,unreadlist in comic_list %}
 	tmp = Array();
+{% if not comic.noimages or perms.agregator.all_images %}
 	{% for unread in unreadlist %}
 		tmp.push({	"unreadid":{{ unread.id }},
 					"comicid":{{ comic.id }},
 					"url":"{{ unread.history.get_url|safe }}",
 					"alt_text":"{{ unread.history.alt_text|default_if_none:""|safe }}"});
 	{% endfor %}
+{% endif %}
 		c = {	"name":"{{ comic.name}}",
 				"id":{{ comic.id }},
+{% if not comic.noimages or perms.agregator.all_images %}
 				"last_url":"{{ comic.last_image|safe }}",
 				"last_alt_text":"{{ comic.last_image_alt_text|default_if_none:""|safe }}",
 				"list":tmp,
+{% endif %}
 				"error":false,
-				"loaded":false};
+				"loaded":false,
+		};
 		comics[{{ comic.id }}] = c;
 {% endfor %}	
 </script>
@@ -47,11 +52,15 @@
 		<h3>{{ comic.name }}</h3>
 		{% if unreadlist %}<span class="newstripsnotice">{% trans "New strips!" %}</span>{% endif %}
 		<div class="striplist">
+{% if comic.noimages and not perms.agregator.all_images %}
+			{% blocktrans with comic.url as url %}The comic has been updated. <a href="{{ url }}">Click here</a> to go to the comic's website.{% endblocktrans %}
+{% else %}
 			{% for unread in unreadlist %}
 			<img id="imgu{{ unread.id }}" src="{{ mediaurl }}images/v2009/striploading.gif" alt="new - loading..." title="{{ unread.history.alt_text|default_if_none:""|safe }}"/><br/>
 			{% empty %}
 			<img id="imgl{{ comic.id }}" src="{{ mediaurl }}images/v2009/striploading.gif" alt="last - loading..." title="{{ comic.last_image_alt_text|default_if_none:""|safe }}"/>
 			{% endfor %}
+{% endif %}
 		</div>
 		<div class="comicextra">
 			<span id="reload{{ comic.id }}" class="reload" style="display:none"><a onclick="reloadComic({{ comic.id }})">{% trans "Reload images" %}</a> | </span>
