--- a/comicagg/templates/v2010/base.html
+++ b/comicagg/templates/v2010/base.html
@@ -19,7 +19,7 @@
 			var url_rate = '{% url rate %}';
 			var url_mark_as_read = '{% url mark_read %}';
 			var url_save_tags = '{% url save_tags %}';
-			var url_configure = '{% url configure %}';
+			var url_organize = '{% url organize %}';
 			var url_save_selection = '{% url save_selection %}';
 			var url_add = '{% url add_comic_ajax %}';
 			var url_remove = '{% url remove_comic_ajax %}';
@@ -55,7 +55,7 @@
 			<div id="head_left">
 				Comics:&nbsp;
 				<span class=""><a href="{% url read %}">{% trans "read" %}<span id="menuUnreadCounter"></span></a></span>&nbsp;
-				<span class=""><a href="{% url configure %}">{% trans "organize" %}</a></span>&nbsp;
+				<span class=""><a href="{% url organize %}">{% trans "organize" %}</a></span>&nbsp;
 				<span class="">{% trans "request" %}</span>&nbsp;
 				<span class=""><a href="{% url comic_list %}">{% trans "list" %}</a></span>&nbsp;
 			</div>
