--- a/comicagg/templates/v2010/base.html
+++ b/comicagg/templates/v2010/base.html
@@ -42,10 +42,10 @@
 		<div id="head">
 			{% if user.is_authenticated %}
 			<div id="head_right">
-				<i><b>{{ user.username }}</b></i>&nbsp;&nbsp;-&nbsp;&nbsp;<span class="">{% trans "profile"%}</span>&nbsp;&nbsp;<span class="">{% trans "help" %}</span>&nbsp;&nbsp;<span class="">{% trans "news" %}</span>&nbsp;&nbsp;{% if user.is_staff %}<span class=""><a href="/admin/">{% trans "admin" %}</a></span>&nbsp;&nbsp;{% endif %}<span class=""><a href="{% url logout %}">{% trans "logout" %}</a></span>
+				<i><b>{{ user.username }}</b></i>&nbsp;&nbsp;-&nbsp;&nbsp;<span class="">{% trans "news" %}</span>&nbsp;&nbsp;{% if user.is_staff %}<span class=""><a href="/admin/">{% trans "admin" %}</a></span>&nbsp;&nbsp;{% endif %}<span class=""><a href="{% url logout %}">{% trans "logout" %}</a></span>
 			</div>
 			<div id="head_left">
-				Comics:&nbsp;&nbsp;<span class=""><a href="{% url read %}">{% trans "read" %}<span id="menuUnreadCounter"></span></a></span>&nbsp;&nbsp;<span class=""><a href="{% url organize %}">{% trans "organize" %}</a></span>&nbsp;&nbsp;<span class="">{% trans "request" %}</span>&nbsp;&nbsp;<span class=""><a href="{% url comic_list %}">{% trans "list" %}</a></span>
+				Comics:&nbsp;&nbsp;<span class=""><a href="{% url read %}">{% trans "read" %}<span id="menuUnreadCounter">{% if unreadCount %} ({{ unreadCount}}){% endif %}</span></a></span>&nbsp;&nbsp;<span class=""><a href="{% url organize %}">{% trans "comics" %}</a></span>&nbsp;&nbsp;<span class="">{% trans "request" %}</span>
 			</div>
 			{% endif %}
 			<div id="branding">
