--- a/comicagg/media/css/v2010/base.css
+++ b/comicagg/media/css/v2010/base.css
@@ -44,6 +44,7 @@ button:hover {
 	background-color:#ddd;
 	border-color:#6b98b5;
 }
+.center { text-align:center }
 /* Menu*/
 #head {
 	color:white;
